# uni-reminder-bot

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/backend/: data.rs  mod.rs
src/commands/: mod.rs  reminder.rs
