[package]
name = "uni-reminder-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
serde = { version = "1.0" }
serde_cbor = "0.11"
tokio = { version = "1.34.0", features = ["full"] }

[patch.crates-io]
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
